# mcp-dap

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/mcp_dap/: __init__.py  config.py  exceptions.py  server.py  session.py  types.py
src/mcp_dap/adapters/: __init__.py  base.py  codelldb.py  debugpy.py  godlv.py  javadebug.py  jsdebug.py
src/mcp_dap/adapters/java_resources/: StandaloneLauncher.java
src/mcp_dap/dap/: __init__.py  client.py  messages.py  protocol.py  transport.py
tests/: __init__.py  conftest.py  test_config.py  test_godlv.py  test_javadebug.py  test_jsdebug.py  test_protocol.py  test_server.py  test_types.py
tests/fixtures/: Simple.java  simple.go  simple.js  simple.py
tests/fixtures/rust_simple/: Cargo.toml
tests/fixtures/rust_simple/src/: main.rs
